--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.1.0",
     "bootstrap": "^5.1.3",
     "common-module": "^0.0.28",
+    "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
