--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "common-module": "^0.0.28",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-pipes": "^3.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
