--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "bootstrap": "^5.1.3",
+    "clear": "^0.1.0",
     "common-module": "^0.0.28",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
